Fix domestic shipping

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,8 @@
     to = "/.netlify/functions/:splat"
     status = 200
     force = true
+
+[[redirects]]
+    from = "/*"
+    to = "/"
+    status = 200
