--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "us-shipping-calculator",
+  "name": "postage-price-plotter",
   "version": "1.0.0",
   "description": "Shipping calculator for domestic and international shipping with a map interface",
   "main": "index.js",
@@ -9,8 +9,11 @@
   "author": "Alex Mous",
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "xml2js": "^0.4.23"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/alex-mous/USPS-Postage-Price-Plotter.git"
   }
 }
